--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "WEBプログラミング講座",
-    "short_name": "WEBプログラミング講座",
+    "name": "WEBツール",
+    "short_name": "WEBツール",
     "icons": [
         {
-            "src": "/android-touch-icon.png",
+            "src": "android-touch-icon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/images/jsrogo.png",
+            "src": "images/jsrogo.png",
             "sizes": "512x512",
             "type": "image/png"
         }
