--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
             "type": "image/png"
         },
         {
-            "src": "images/jsrogo.png",
+            "src": "images/tool.jpg",
             "sizes": "512x512",
             "type": "image/png"
         }
